services/datalake/airflow/airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  selector:
    matchLabels:
      component: airflow-scheduler
  template:
    metadata:
      labels:
        component: airflow-scheduler
    spec:
      containers:
      - name: airflow-scheduler
        image: apache/airflow:2.9.3
        command: ["airflow"]
        args: ["scheduler"]
