services/datalake/airflow/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kd.itversity.com
    http:
      paths:
      - path: /airflow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
  tls:
  - hosts:
    - kd.itversity.com
    secretName: itversity-tls
